<resources>
    <string name="app_name">ExactumPositioner</string>
    <string name="action_settings">Settings</string>
    <string name="xCoordinateLabelBase">x:</string>
    <string name="yCoordinateLabelBase">y:</string>
    <string name="btnSave">Save</string>
    <string name="btnLog">Log records</string>
    <string name="drawerTitle">Select floor</string>
    <string name="title_activity_calibration">Calibrate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_save">Save</string>
    <string name="action_show_all">Show all</string>
    <string name="action_delete_all">Delete all</string>
    <string name="floor_base">"Exactum floor: "</string>
    <string name="start_scan">Scan</string>
    <string name="title_activity_view_finger_prints">Scan results</string>
    <string name="action_list_all">List all</string>
    <string name="action_export_all">Export all</string>
    <string name="load_more">Load more</string>
    <string name="loading">Loading...</string>
</resources>
