<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"
        android:orderInCategory="1" />-->
    <item android:id="@+id/action_show_all"
        android:icon="@drawable/ic_grain_white_24dp"
        android:title="@string/action_show_all"
        app:showAsAction="ifRoom"
        android:orderInCategory="2" />
    <item android:id="@+id/action_list_all"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/action_list_all"
        app:showAsAction="ifRoom"
        android:orderInCategory="2" />
    <item android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete_all"
        app:showAsAction="always"
        android:orderInCategory="4" />
    <item android:id="@+id/action_export_all_data"
        android:title="@string/action_export_all"
        app:showAsAction="never"
        android:orderInCategory="5" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
